--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/devu2/My-Brand-David-Uwayezu#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
