--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This is my brand portfolio website",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js",
+    "test": "cross-env NODE_ENV=test mocha server/test/**.test.js --exit --timeout 15000",
+    "coverage": "nyc --reporter=html --reporter=text  npm test",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -19,13 +22,20 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.1.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.1.3",
     "mongoose": "^5.10.6",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "supertest": "^5.0.0"
   }
 }
