--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server/server.js",
+    "start:dev": "nodemon server/server.js",
     "test": "cross-env NODE_ENV=test mocha server/test/**.test.js --exit --timeout 15000",
     "coverage": "nyc --reporter=html --reporter=text  npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
@@ -36,6 +37,8 @@
     "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "supertest": "^5.0.0"
+    "supertest": "^5.0.0",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.1.4"
   }
 }
